# cpp-neuralnetwork

./: .gitignore  CMakeLists.txt  study_nn1_simple_perceptron.cpp  study_nn2_matrix.cpp  study_nn3_simple_perception_backpropagation.cpp  study_nn4_multi_perceptron_backpropagation.cpp  study_nn5_mnist.cpp  study_nn6_convNN.cpp  study_nn7_use_layer.cpp
layer/: AffineLayer.cpp  AffineLayer.hpp  BaseLayer.hpp  BatchNormalizeLayer.cpp  BatchNormalizeLayer.hpp  ReluLayer.cpp  ReluLayer.hpp  SigmoidLayer.cpp  SigmoidLayer.hpp
matrix/: Matrix.hpp
